added responsive sidebar,fetch all courses ,created responsive cards for courses

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@
     --color-darkerBg : #00040f;
     --color-purple : #a516c6;
     --color-blue : #2644f9;
+    --color-deep-blue : #146ee6;
     --color-footer-Bg : #1e1b4b;
 }
 
